<resources>
    <string name="app_name">APP-UIKit</string>
    <string name="app_main_title">Tencent RTC</string>
    <string name="app_user_id">UserId</string>
    <string name="app_hint_user_id">Enter a userId</string>
    <string name="app_btn_login">Log In</string>
    <string name="app_user_id_is_empty">UserId is empty</string>
    <string name="app_toast_login_fail">Login failed [%d]%s</string>
    <string name="app_custom_name_1">Martijn</string>
    <string name="app_custom_name_2">irfan</string>
    <string name="app_custom_name_3">Rosanna</string>
    <string name="app_custom_name_4">Franklyn</string>
    <string name="app_custom_name_5">Maren</string>
    <string name="app_title_register">Register</string>
    <string name="app_hint_user_name">Enter a username</string>
    <string name="app_tips_user_name">Chinese characters, letters, numbers and underscores, 2 – 20 words</string>
    <string name="app_toast_failed_to_set">Failed: %s</string>
    <string name="app_toast_register_success_and_logging_in">Registered successfully</string>
    <string name="app_user_id_colon">UserID:</string>

    <string name="app_main">Home Page</string>
    <string name="app_personal_center">Personal Center</string>
    <string name="app_settings">Settings</string>
    <string name="app_log">Log</string>
    <string name="app_user_avatar">Avatar</string>
    <string name="app_user_nickname">Nickname</string>
    <string name="app_language">Language</string>

    <string name="app_login_out">Log out</string>
    <string name="app_btn_cancel">Cancel</string>
    <string name="app_btn_confirm">Confirm</string>
    <string name="app_dialog_log_out">Are you sure you want to log out?</string>
    <string name="app_login_language">Language</string>
    <string name="app_self_detail_modify_nickname">Name</string>
    <string name="app_self_detail_modify_nickname_rule">Only letters, digits, underscores, and Chinese characters.</string>
    <string name="app_choose_avatar">Choose Avatar</string>
    <string name="app_main_item_call">Call</string>
    <string name="app_main_item_live">Live</string>
    <string name="app_main_item_chatroom">Audio Chat</string>
    <string name="app_main_item_call_sub">Ringtone/Floating window/Less stutter</string>
    <string name="app_main_item_live_sub">Live preview/Beauty filters/Multi-host</string>
    <string name="app_main_item_chatroom_sub">High audio quality/Large room/Smooth mic on/off</string>
    <string name="app_main_item_category_kit">UIKit</string>
    <string name="app_main_item_category_hot">Hot</string>
    <string name="app_main_item_meeting">Conference</string>
    <string name="app_main_item_meeting_sub">Quick meeting/Invite/Manage participants/Share screen</string>
    <string name="app_main_tag">Attention: This is a DEMO APP. Do not trust anyone asking you to transfer money. Report scam></string>
    <string name="app_title_share_log">Share Logs</string>
    <string name="app_group_call">group call</string>
    <string name="app_user_id_list">UserIdList</string>
    <string name="app_please_input_user_id_list">Please enter a list of user IDs</string>
    <string name="app_media_type">Media Type</string>
    <string name="app_video_call">Video Call</string>
    <string name="app_audio_call">Voice Call</string>
    <string name="app_optional_parameters">Optional Parameters</string>
    <string name="app_group_id">GroupId</string>
    <string name="app_please_input_group_id">Please enter the group ID</string>
    <string name="app_call_setting">Call Settings</string>
    <string name="app_join_group_call">Join call</string>
    <string name="app_start_call">Initiate a call</string>
    <string name="app_setting">set up</string>
    <string name="app_invite_cmd_extra_info">Extended information in invitation signaling</string>
    <string name="app_offline_message_json_string">Please enter the json string of offline message information</string>
    <string name="app_avatar">avatar</string>
    <string name="app_set_ring_path">set ringtone path</string>
    <string name="app_set_success">successfully set</string>
    <string name="app_set_fail">Setup failed</string>
    <string name="app_basic_setting">Basic Settings</string>
    <string name="app_not_setting">Not set</string>
    <string name="app_nickname">nickname</string>
    <string name="app_set_ring">set ringtone</string>
    <string name="app_mute_mode">silent mode</string>
    <string name="app_show_float_button">Show floating</string>
    <string name="app_blur_background">Show blur background</string>
    <string name="app_incoming_banner">Show incoming banner</string>
    <string name="app_ai_subtitles">Show AI subtitles</string>
    <string name="app_call_params_setting">Call Parameters</string>
    <string name="app_int_room_id">Digital room</string>
    <string name="app_string_room_id">String room</string>
    <string name="app_timeout">Timeout</string>
    <string name="app_user_data">Extended</string>
    <string name="app_offline_message">Offline message</string>
    <string name="app_view_setting">UI Customization</string>
    <string name="app_disable_button">disable button</string>
    <string name="app_custom_main_view">add custom view</string>
    <string name="app_custom_stream_view">use stream view</string>
    <string name="app_video_setting">Video Settings</string>
    <string name="app_resolution">Resolution</string>
    <string name="app_room_id_num">RoomID（Number）</string>
    <string name="app_room_id_str">RoomID（String）</string>
    <string name="app_horizontal_screen">Horizontal</string>
    <string name="app_vertical_screen">Vertical</string>
    <string name="app_fit_mode_fit">Fit</string>
    <string name="app_fit_mode_fill">Fill</string>
    <string name="app_screen_orientation">Screen orientation</string>
    <string name="app_fit_mode">Fill pattern</string>
    <string name="app_rotation">Rotation</string>
    <string name="app_beauty_level">Beauty level</string>
    <string name="app_please_set_call_waiting_timeout">Please set call waiting timeout</string>
    <string name="app_please_set_beauty_level">Please set the beauty level</string>
    <string name="app_main_item_video_live">Video Live</string>
    <string name="app_main_item_video_live_sub">Create Interactive Video Live with Live API for a Seamless Streaming Experience.</string>
    <string name="app_main_item_voice_room">Voice Room</string>
    <string name="app_main_item_voice_room_sub">Enable Interactive Voice Room with Live API for an Enhanced Communication Experience.</string>
    <string name="app_enable_hight_perperformance">Enable High Performance</string>
    <string name="app_disable_feature">Disable Feature</string>
    <string name="app_enable_test_env">Enable Test ENV</string>
</resources>