<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="171dp"
        android:scaleType="fitCenter"
        android:src="@drawable/app_tencent_cloud_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/app_main_title"
        android:textColor="@color/app_color_black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_login_logo"
        app:layout_constraintStart_toEndOf="@id/iv_login_logo"
        app:layout_constraintTop_toTopOf="@id/iv_login_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/app_bg_edit_text"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_logo">

        <TextView
            android:id="@+id/tv_userid_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_user_id"
            android:textColor="@color/app_color_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_userId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:hint="@string/app_hint_user_id"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/app_color_black"
            android:textColorHint="@color/app_text_color_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_userid_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_userid_hint" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/app_bg_button"
        android:text="@string/app_btn_login"
        android:textColor="@color/app_color_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_edit" />

    <RelativeLayout
        android:id="@+id/rl_high_performance"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/app_enable_hight_perperformance"
            android:textColor="@color/common_black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_enable_high_performance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:checked="false"
            app:thumbTint="@color/audio_effect_switch_thumb_bg"
            app:trackTint="@color/audio_effect_switch_track_bg" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_disable_feature"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rl_high_performance">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/app_disable_feature"
            android:textColor="@color/common_black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_disable_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:checked="false"
            app:thumbTint="@color/audio_effect_switch_thumb_bg"
            app:trackTint="@color/audio_effect_switch_track_bg" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rl_disable_feature">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/app_enable_test_env"
            android:textColor="@color/common_black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_enable_test_env"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:checked="false"
            app:thumbTint="@color/audio_effect_switch_thumb_bg"
            app:trackTint="@color/audio_effect_switch_track_bg" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>